--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="*.json"
+include_filter="*.json, changelog"
 exclude_filter=""
 export_path="../strive_seq_tests/win64/Strive for Power 2.exe"
 script_export_mode=0
